syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(ApplicationRequest) returns (ApplicationResponse) {}
  rpc Cancel(CancelRequest) returns (CancelResponse) {}
}

message ApplicationRequest {
  ClientData clientData = 1;
  int32 disbursementAmount = 2;
}

message ClientData {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  int32 salary = 4;
}

message ApplicationResponse {
  string applicationId = 1;
}

message CancelRequest {
  string applicationId = 1;
}

message CancelResponse {
}